Let's discuss section done

--- a/index.html
+++ b/index.html
@@ -80,10 +80,25 @@
             <div>
                 <div class="flex bg-purple-100 rounded-box p-10 mt-5">
                     <h4 class="font-bold text-xl">Title</h4>
-                    <h6 class="ml-52">Mark as read</h6>
+                    <h6 class="ml-52">Mark as read (<span id="click-count">0</span>) </h6>
+                </div>
+                <div id="small-card">
+                    
                 </div>
             </div>
         </div>
+<!-- Join Forum Section -->
+<div class="hero bg-slate-900 rounded-3xl my-10">
+    <div class="hero-content flex-col lg:flex-row-reverse m-10 mx-24">
+      <img src="./images/joinforum.png" class="max-w-sm rounded-lg shadow-2xl" />
+      <div>
+        <h1 class="text-5xl text-white font-bold">Join Our Forum</h1>
+        <p class="py-10 text-white">Share your favorite opinion and win WP forum coffee mug! Yes. you can run unit tests and view the results directly within the app.</p>
+        <button class="btn btn-primary rounded-3xl px-16 text-xl">Registered Now</button>
+      </div>
+    </div>
+  </div>
+
     </main>
     <footer>
 
