Card for Latest Posts created

--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
       </div>
     </div>
   </div>
+<!-- latest posts section -->
+<div class="text-center">
+    <h2 class="font-bold text-5xl mt-16">Latest posts</h2>
+    <p class="text-xl my-10 mx-52"> Yes, you can run until tests and view the results directly within the app. The integrated testing features allow for a streamlined</p>
+</div>
+<!-- latest posts card section -->
+    <div id="final-card" class="flex gap-5">
+
+    </div>
 
     </main>
     <footer>
