footer section added

--- a/index.html
+++ b/index.html
@@ -98,18 +98,40 @@
       </div>
     </div>
   </div>
-<!-- latest posts section -->
+<!-- latest posts section heading -->
 <div class="text-center">
     <h2 class="font-bold text-5xl mt-16">Latest posts</h2>
     <p class="text-xl my-10 mx-52"> Yes, you can run until tests and view the results directly within the app. The integrated testing features allow for a streamlined</p>
 </div>
-<!-- latest posts card section -->
+
+<!-- Final posts card section -->
     <div id="final-card" class="flex gap-5">
 
     </div>
 
-    </main>
-    <footer>
+</main>
+
+<!-- footer section -->
+    <footer class="mt-14">
+
+        <footer class="footer footer-center p-10 bg-gray-200 text-primary-content">
+            <aside>
+              <p class="font-bold text-5xl text-black">ReTro</p> 
+              <p class="text-black">Contrary to popular belief, </p>
+            </aside> 
+
+            <nav>
+              <div class="grid grid-flow-col gap-4">
+                <img src="./images/icons8-twitter-30.png" alt="">
+                <img src="./images/icons8-facebook-30.png" alt="">
+                <img src="./images/icons8-instagram-30.png" alt="">
+                <img src="./images/icons8-github-30.png" alt="">
+              </div>
+              <hr>
+              <p class="text-black">Copyright © 2024 - All right reserved</p>
+
+            </nav>
+          </footer>
 
     </footer>
     <script src="./script/forum.js"></script>
