fixed some design related issues

--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
                 </div>
                 <div class="flex-none gap-x-6">
                     <div class="tooltip" data-tip="Home">
-                        <button class="btn"><img src="./images/icons8-home-50.png" alt=""></button>
+                        <button class="btn"><img src="./images/icons8-home-24.png" alt=""></button>
                     </div>
                     <div class="tooltip" data-tip="Edit">
-                        <button class="btn"><img src="./images/icons8-edit-50.png" alt=""></button>
+                        <button class="btn"><img src="./images/icons8-edit-30.png" alt=""></button>
                     </div>
                     <div class="tooltip" data-tip="Add">
-                        <button class="btn"><img src="./images/icons8-add-50.png" alt=""></button>
+                        <button class="btn"><img src="./images/icons8-add-30.png" alt=""></button>
                     </div>
                     <div class="tooltip" data-tip="Bookmark">
-                        <button class="btn"><img src="./images/icons8-flag-50.png" alt=""></button>
+                        <button class="btn"><img src="./images/icons8-flag-24.png" alt=""></button>
                     </div>
                     <button class="btn btn-primary rounded-full">Sign In</button>
                 </div>
@@ -118,7 +118,7 @@
 
         <footer class="footer footer-center p-10 bg-gray-200 text-primary-content">
             <aside>
-              <p class="font-bold text-5xl text-black my-6">ReTro</p> 
+              <p class="font-bold text-5xl text-black my-6">BrainStorming</p> 
               <p class="text-black text-lg">BrainStorming is useful when you need to break out of stale thinking pattern.</p>
             </aside> 
 
