search option completed

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
         <div class="text-center">
             <h2 class="font-bold text-5xl mt-16">Let's discuss</h2>
             <p class="text-xl my-10 mx-52">BrainStorming's layout and structure are intended to be user-friendly and simple to explore. We provide a comprehensive and easily accessible digital platform for creative ideas and solution.</p>
+            <span class="loading loading-spinner loading-lg"></span>
         </div>
 <!-- card section         -->
         <div class="flex">
